--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: #222
+  background: #222 
 }
 
 ::-webkit-scrollbar{
@@ -67,10 +67,10 @@ header{
 
 .headlines h2{
     color: #fff;
-    font-family: sans-serif;
+    
     text-align: center;
     padding: 30px;
-    margin-top: 30px ;
+    margin-top: 140px ;
 }
 
 .headlines img{
@@ -84,6 +84,11 @@ header{
     padding: 5rem;
 }
 
+.main-text h3{
+    font-size: 4vw;
+    text-transform: capitalize;
+    color: #a49572;
+}
 .main-text h2 {
     font-size: 10vw;
     font-weight: 900;
@@ -120,4 +125,9 @@ header{
 
 .main-text h4:hover{
     color: #7d7d7d;
+}
+
+
+.about-container {
+    background: #a49572;
 }
