--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ header{
 .projetos {
     width: 100%;
     color: #efefef;
-    background: url(../img/backgroundproj.png);
+    background: url(/img/backgroundproj.png);
     background-size: 50%;
     background-position: 50%;
     padding: 50px;
